# nodegaze

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  install.sh  shell.nix
.sqlx/: query-010d33415dc1c4f9ba9ec8fef6dc14bbc4f199b763150363365d75954941bad6.json  query-04341cfed64a50ad7802658203c5a98cd48f49104ac517a335ad71708ea3f6a6.json  query-0f0bb341c2f91fa8c210fde99ca24ff14438f11496d05dcfc90eacf68f3510fd.json  query-1253c37c5082ee4422f22af009d4d79ed5c4009968c94686c73a9bb0308851e6.json  query-19ce23d1e2354ea30f1fbb4c2992e90326158f5d88d0bb72346a08817a8fc24f.json  query-1b43c0a378b75fd13d4fe04efef76a05bf43799a32ee4495de37d2b10b502fb3.json  query-1b442d29ef52667c67d2157b42e49eda35f737800323a93fc87846241954c220.json  query-1dcbd963a4ca49114ff0745b19f9b8a9b69cc6925314e534879725d09ea023f9.json  query-1eaecd9d13968a56a6f653f21445a0c38e79902a858e278dcfd97d6f0eff147c.json  query-29a2ff5d0f9001739685ac715e25f7c5e92881178432355b75386150ae65bd2d.json  query-2b0569f934f4d173d339fd3c7f36c0ed7fa5f4aea92c63751ea5ec3d44c61d10.json  query-35d7d30908f8927737d72ef8bc1ba9c070eea62a7f74cca66af5b63ddf996d45.json  query-3fecf33281c788eae0b098234ae03d8a0b0f788c98afff1cf1ea067d69d45469.json  query-42fb1680bcd0be2515390e52849d767a0661949fbf7636d027e89d9b073eccd5.json  query-437f13faf9ed3777c58b4b26ce990f28e17ebab380248a969b5fad47e2685353.json  query-485b8d017bce915470d7011e94968b0d56dcbbcd5cf3393b3164eaea6ca89cb3.json  query-4d579094f8a9028819b469852a34e6c41f7f88294834e4eeda77a969175ed4dc.json  query-51498bb5ab503b04e960c88f79ae71bfe40b83b66fb7b98eec1229dd05571e09.json  query-5d53d115a47885b9d90128d0d1a424b633973de45e06bbc094bef45d76f790d3.json  query-5dba476fde4bc28079e0844cfe20881a3d6be047bef242ed23f8ecc0e93a471a.json  query-5f91c0888dcf5ac42cc1ff32b4c9436c8556ce06606e9aa258316e7de6f286e9.json  (+26 more)
backend/: .env.example  Cargo.toml
backend/migrations/: 20250715221956_init.sql  20250717010813_init.sql
backend/src/: main.rs
backend/src/api/: common.rs  mod.rs
backend/src/api/account/: handlers.rs  mod.rs  routes.rs
backend/src/api/channel/: handlers.rs  routes.rs
backend/src/api/credential/: handlers.rs  mod.rs  routes.rs
backend/src/api/event/: handlers.rs  mod.rs  routes.rs
backend/src/api/invite/: handlers.rs  mod.rs  routes.rs
backend/src/api/invoice/: handlers.rs  routes.rs
backend/src/api/node/: handlers.rs  mod.rs  routes.rs
backend/src/api/notification/: handlers.rs  routes.rs
backend/src/api/payment/: handlers.rs  mod.rs  models.rs  routes.rs
backend/src/api/user/: handlers.rs  mod.rs  routes.rs
backend/src/auth/: errors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  service.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs  models.rs  nodegaze.db  nodegaze.db-shm  nodegaze.db-wal
backend/src/database/docs/: database-schema.md
backend/src/errors/: mod.rs
backend/src/repositories/: account_repository.rs  credential_repository.rs  event_repository.rs  invite_repository.rs  mod.rs  notification_repository.rs  role_repository.rs  user_repository.rs
backend/src/services/: account_service.rs  credential_service.rs  data_aggregator.rs  email_service.rs  event_manager.rs  event_service.rs  invite_service.rs  mod.rs  node_manager.rs  notification_dispatcher.rs  notification_service.rs  user_service.rs
backend/src/utils/: crypto.rs  generate_random_string.rs  handlers_common.rs  jwt.rs  mod.rs  sats_to_usd.rs
docs/: build-macos.md  (+3 more)
(+68 files in other folders)
