[workspace]
resolver = "2"

members = ["backend"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
thiserror = "1.0"
serde_json = "1.0"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["recovery", "serde"] }
log = "0.4"
tracing = "0.1"
bitcoin = { version = "0.32.6", features = ["serde"] }
lightning = "0.0.123"
cln-grpc = "0.1.3"
