[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
expanduser = "1.2.2"
tokio.workspace = true
lightning.workspace = true
tonic_lnd = { package="fedimint-tonic-lnd", version="0.1.2", features=["lightningrpc", "routerrpc"] }
tonic = { version = "0.8", features = ["tls", "transport"] }
cln-grpc.workspace = true
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tracing.workspace = true
serde_json.workspace = true
async-trait.workspace = true
